<?xml version="1.0"?>
<package format="3">
  <name>attach_shelf</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pangineering@gmail.com">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <!-- Keep only the relevant dependency -->
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <!-- Additional dependencies... -->
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <!-- Additional dependencies... -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
